styles.css
/* ... */
.button:hover .project-link {
  bottom: 0;
  right: 0;
}

.project-link {
  position: relative;
  bottom: .7rem;
  right: .7rem;
  padding: 1rem;
  color: var(--clr-grey-10);
  transition: all .2s
}

.project-link {
  background-color: var(--clr-grey-1);
}

.project-link i {
  margin-right: .5rem;
}

.project-height {
  min-height: 100vh;
  display: grid;
  place-items: center;
}

.project-marker {
  width: 4rem;
  height: 4rem;
  /* opacity: .5; */
  /* border: 2px solid var(--clr-grey-1); */
  border-radius: 50%;
  position: absolute;
  inset: 0;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) rotate(0);
  display: grid;
  place-items: center;
  transition: .4s ease-in-out;
}

.project-marker svg {
  width: 100%;
  height: 100%;
}

.project.fade-in .ecommerce-marker {
  opacity: 0;
  transform: translate(100%, -50%);
  /* animation: markerPop .4s ease-in-out forwards; */
}

.project.fade-in .space-marker {
  opacity: 0;
  transition: .5s ease-out;
  transform: translate(-50%, -500%);
}

.project.fade-in .multi-form-marker {
  opacity: 0;
  transition: .5s ease-out;
  transform: translate(-50%, -50%) rotateZ(720deg);
}

.project.fade-in .netflix-marker {
  opacity: 0;
  transform: translate(-50%, -50%) scale(3)
}


/*
=============== 
Contact Me
===============
*/

#contact-me {
  padding: 3rem 0;
}

.contact-container {
  position: relative;
}

#contact-form {
  position: relative;
  overflow: hidden;
  margin-top: 1rem;
}

.mail-form {
  padding-bottom: 3rem;
  position: relative;
  flex: 1;
}

#contact-me .title {
  padding-bottom: 0 !important;
}

#contact-me .title h2 {
  font-family: 'Dancing Script', cursive;
  transform: translateX(5rem);
  opacity: 0;
  margin-bottom: 0;
}

.email-card {
  text-align: center;
  padding: 1.5rem 1rem;
  position: relative;
  /* font-size: 1.3rem; */
  margin: auto;
  width: 100%;
  opacity: 0;
  display: flex;
  justify-content: center;
  align-items: center;
  /* background-color: var(--clr-grey-10); */
  /* background-color: #49a6e9; */
  color: var(--clr-grey-1);
  cursor: pointer;
  pointer-events: none;
}

.email-card i {
  margin-right: 1rem;
}

.email-tip {
  position: relative;
}

.email-tip::before {
  display: flex;
  align-items: center;
  justify-content: center;
  content: "Copied to clipboard!";
  width: 100%;
  height: 2rem;
  position: absolute;
  top: -2.2rem;
  left: -1rem;
  background-color: var(--clr-grey-1);
  color: #fff;
  border-radius: 10px;
  z-index: 1000;
  opacity: 0;
}

.email-tip.copied::before {
  animation: emailPopup 2s linear;
}

@keyframes emailPopup {
  0% {
    opacity: 0;
  }

  25% {
    opacity: 1;
  }

  70% {
    opacity: 1;
  }

  100% {
    opacity: 0;
  }
}

.mail-form .title>p {
  transform: translateX(-5rem);
  opacity: 0;
  padding: 1rem 0;
  /* padding-bottom: 5rem; */
}

.mail-form p span {
  transform: translateX(10rem);
  opacity: 0;
  text-transform: lowercase;
  font-family: initial;
  font-size: 1.5rem;
  color: #222;
}

.mail-form input,
textarea {
  width: 100%;
  padding: 2rem 1rem;
  border: none;
  margin-bottom: 0;
}

.mail-form .name input {
  transform: translateX(-5rem);
  opacity: 0;
}

.mail-form .email input {
  transform: translateX(-8rem);
  opacity: 0;
}

.mail-form textarea {
  transform: translateX(-11rem);
  opacity: 0;
  background-color: transparent;
}

.form-button {
  transform: translateX(5rem);
  opacity: 0;
  width: 90%;
  margin: auto;
}

.name,
.email,
.message {
  position: relative;
}

.message {
  margin-bottom: 2rem;
}

.name::after,
.email::after,
.message::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 0;
  width: 0%;
  height: 1px;
  background-color: #000;
}

@keyframes formAnim {
  to {
    width: 100%;
  }
}

.mail-form input:focus {
  outline: none;
  font-weight: 600;
}

.mail-form.fade-in h2,
.mail-form.fade-in p,
.mail-form.fade-in p span,
.mail-form.fade-in input,
.mail-form.fade-in textarea,
.mail-form.fade-in .form-button {
  animation: mailFadeIn .5s 1s ease forwards;
}

.mail-background {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  /* opacity: 0; */
  transform: scale(0.1);
  background-color: hsl(210, 36%, 96%);
}

.mail-form.fade-in .mail-background {
  animation: mailBackAppear .5s ease .7s forwards;
  /* opacity: 1; */
  /* transform: scale(1); */
  /* transition: transform .5s ease; */
}

@keyframes mailBackAppear {
  to {
    opacity: 1;
  transform: scale(1);
  }
}

.mail-marker {
  position: absolute;
  top: 43%;
  left: 50%;
  transform: translate(-50%, -60%);
  opacity: 0;
  display: none;
  z-index: 2;
}

.mail-marker-closed {
  position: absolute;
  top: 43%;
  left: 50%;
  transform: translate(-50%, -50%);
  z-index: 1;
}

.mail-form.fade-in .mail-marker {
  display: block;
  animation: openEnvelope .8s ease forwards;
}

.mail-form.fade-in .mail-marker-closed {
  animation: envelope .3s ease forwards;
}

@keyframes envelope {
  to {
    opacity: 0;
    display: none;
  }
}

@keyframes openEnvelope {
  0% {
      opacity: 0;
  }

  50% {
    opacity: 1;
  }

  100% {
    opacity: 0;
    display: none;
  }
}

@media screen and (min-width: 748px) {
  .mail-marker,
  .mail-marker-closed,
  .mail-form.fade-in .mail-marker  {
    /* width: 4rem !important;
    height: 4rem !important; */
    display: none;
  } 
}

.mail-form.fade-in .name::after,
.mail-form.fade-in .email::after,
.mail-form.fade-in .message::after {
  animation: formAnim .5s .7.5s ease forwards;
}

@keyframes mailFadeIn {
  to {
    transform: translateX(0px);
    opacity: 1;
  }
}

.mail-form.fade-in .email-card {
  animation: mailCardAppear .5s .65s linear forwards;
}

@keyframes mailCardAppear {
  0% {
    opacity: 0;
  }

  25% {
    font-size: 1rem;
  }

  50% {
    opacity: 1;
    font-size: 1.2rem;
    pointer-events: initial;
  }

  75% {
    opacity: 1;
    font-size: .85rem;
    pointer-events: initial;
  }

  100% {
    opacity: 1;
    font-size: 1rem;
    pointer-events: initial;
  }
}
/* ... */

